# SAT-variable-clustering-FH-graph-seg

./: .condarc  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  paths.json  ung.cpp  vig-changes.md
.github/workflows/: ci.yml
algorithms/: CMakeLists.txt  README.md
algorithms/cnf_info/: CMakeLists.txt  README.md  main.cpp  sample.cnf
algorithms/louvain/: CMakeLists.txt  README.md  main.cpp
algorithms/matrix_multiply/: CMakeLists.txt  main.cpp
algorithms/prime_sieve/: CMakeLists.txt  main.cpp
algorithms/segmentation/: CMakeLists.txt  README.md  main.cpp
algorithms/segmentation_eval/: CMakeLists.txt  README.md  main.cpp
algorithms/vig_info/: CMakeLists.txt  README.md  main.cpp
include/thesis/: cli.hpp  cnf.hpp  community.h  comp_metrics.hpp  csv.hpp  disjoint_set.hpp  modularity.hpp  segmentation.hpp  timer.hpp  vig.hpp
sample_comps/: sample.edges.csv  sample.node.csv  sample_components.csv  sample_cross.csv
scripts/benchmarks/: README.hash_selection.md  README.md  README.seg_eval_runner.md  bench_runner.py  environment.yml  family_color_map.py  family_map_utils.py  generate_and_visualize_graph.README.md  generate_and_visualize_graph.py  lib_bench.sh  plot.sh  plot_component_sizes.README.md  plot_component_sizes.py  plot_instance_scatter.py  plot_results.py  plot_segmentation_results.README.md  plot_segmentation_results.py  plot_styles.py  plot_vig_info_results.README.md  plot_vig_info_results.py  run_segmentation_random.sh  run_vig_info_random.sh  segmentation_eval_runner.py  visualize_graph.README.md  visualize_graph.py
scripts/fileprocessors/: extract_family_hashes.py  (+2 more)
tests/: CMakeLists.txt
(+25 files in other folders)
